--- a/package.json
+++ b/package.json
@@ -13,6 +13,23 @@
   "author": "rojr",
   "license": "UNLICENSED",
   "dependencies": {
-    "electron": "^2.0.0"
+    "electron": "^2.0.0",
+    "iohook": "^0.1.16",
+    "segfault-handler": "git+https://github.com/ddopson/node-segfault-handler.git"
+  },
+  "iohook": {
+    "targets": [
+      "node-64",
+      "electron-57"
+    ],
+    "platforms": [
+      "win32",
+      "darwin",
+      "linux"
+    ],
+    "arches": [
+      "x64",
+      "ia32"
+    ]
   }
 }
