--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "UNLICENSED",
   "dependencies": {
     "electron": "^2.0.0",
+    "electron-json-storage": "^4.1.0",
     "iohook": "^0.1.16",
+    "jquery": "^3.3.1",
     "segfault-handler": "git+https://github.com/ddopson/node-segfault-handler.git"
   },
   "iohook": {
